commented out debugging code

--- a/project007.ipynb
+++ b/project007.ipynb
@@ -102,8 +102,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.DataFrame(columns = column_names)\n",
-    "#movie_list = movie_list[0:0]\n",
+    "# These commented out lines are use for debugging\n",
+    "#df = pd.DataFrame(columns = column_names) # resets the df\n",
+    "#movie_list = movie_list[0:0] # slices small sections of the list \n",
     "#print(movie_list)\n",
     "\n",
     "# Iterate through the list and add results to data frame\n",
@@ -119,58 +120,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# These were all used to try and debug the program but it didn't work\n",
     "# Write out the list to try and escape hang up error\n",
-    "new_row = data('dr no')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('from russia with love')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('goldfinger')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('thunderball')\n",
-    "df = df.append(new_row, ignore_index=True) \n",
-    "new_row = data('you only live twice')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('on her majestys secret service')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('diamonds are forever')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('live and let die')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('the man with the golden gun')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('the spy who loved me')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('moonraker')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('for your eyes only')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('octopussy')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('view to a kill')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('the living daylights')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('licence to kill')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('goldeneye')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('tomorrow never dies')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('the world is not enough')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('die another day')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('casino royale')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('quantum of solace')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('skyfall')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('spectre')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "new_row = data('no time to die')\n",
-    "df = df.append(new_row, ignore_index=True)\n",
-    "df"
+    "# new_row = data('dr no')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('from russia with love')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('goldfinger')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('thunderball')\n",
+    "# df = df.append(new_row, ignore_index=True) \n",
+    "# new_row = data('you only live twice')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('on her majestys secret service')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('diamonds are forever')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('live and let die')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('the man with the golden gun')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('the spy who loved me')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('moonraker')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('for your eyes only')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('octopussy')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('view to a kill')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('the living daylights')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('licence to kill')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('goldeneye')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('tomorrow never dies')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('the world is not enough')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('die another day')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('casino royale')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('quantum of solace')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('skyfall')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('spectre')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# new_row = data('no time to die')\n",
+    "# df = df.append(new_row, ignore_index=True)\n",
+    "# df"
    ]
   }
  ],
