data collection completed

--- a/project007.ipynb
+++ b/project007.ipynb
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -787,7 +787,7 @@
        "24       $525,482,453    $645,839,906  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,6 +812,7 @@
     "        df['International B.O.'][index] = itlbo\n",
     "\n",
     "# Add a new column 'Total Revenue' that consists of the sum of US and International Box Offices\n",
+    "df['Total Revenue'] = ''\n",
     "for index, row in df.iterrows():\n",
     "    total = 0\n",
     "    usbo = floater(str(df['US Box Office'].values[index]))\n",
@@ -824,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -930,18 +931,18 @@
        " '2010': '218.1',\n",
        " '2011': '224.9',\n",
        " '2012': '229.6',\n",
-       " '\\xa02013': '233.0',\n",
-       " '\\xa02014': '236.7',\n",
-       " '\\xa02015': '237.0',\n",
-       " '\\xa02016': '240.0',\n",
-       " '\\xa02017': '245.1',\n",
-       " '\\xa02018': '251.1',\n",
-       " '\\xa02019': '255.7',\n",
-       " '\\xa02020': '258.8',\n",
-       " '\\xa02021*': '271.4'}"
+       " '2013': '233.0',\n",
+       " '2014': '236.7',\n",
+       " '2015': '237.0',\n",
+       " '2016': '240.0',\n",
+       " '2017': '245.1',\n",
+       " '2018': '251.1',\n",
+       " '2019': '255.7',\n",
+       " '2020': '258.8',\n",
+       " '2021': '271.4'}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,7 +963,7 @@
     "cpi = []\n",
     "for value in info_list[::3]:\n",
     "    value = value.replace('*', '')\n",
-    "    v\n",
+    "    value = value.replace(u'\\xa0', '')\n",
     "    year.append(value)\n",
     "for value in info_list[1::3]:\n",
     "    cpi.append(value)\n",
@@ -973,10 +974,368 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Actor</th>\n",
+       "      <th>US Box Office</th>\n",
+       "      <th>International B.O.</th>\n",
+       "      <th>Total Revenue</th>\n",
+       "      <th>Adjusted Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dr. No</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>Sean Connery</td>\n",
+       "      <td>$16,067,035</td>\n",
+       "      <td>$56,367,173</td>\n",
+       "      <td>$72,434,208</td>\n",
+       "      <td>$648,800,134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>From Russia with Love</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>Sean Connery</td>\n",
+       "      <td>$24,796,765</td>\n",
+       "      <td>$86,993,247</td>\n",
+       "      <td>$111,790,012</td>\n",
+       "      <td>$991,497,035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Goldfinger</td>\n",
+       "      <td>1964</td>\n",
+       "      <td>Sean Connery</td>\n",
+       "      <td>$51,081,062</td>\n",
+       "      <td>$179,205,128</td>\n",
+       "      <td>$230,286,190</td>\n",
+       "      <td>$2,016,118,451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Thunderball</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>Sean Connery</td>\n",
+       "      <td>$63,595,658</td>\n",
+       "      <td>$223,109,458</td>\n",
+       "      <td>$286,705,116</td>\n",
+       "      <td>$2,470,214,872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>You Only Live Twice</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>Sean Connery</td>\n",
+       "      <td>$43,084,787</td>\n",
+       "      <td>$151,152,198</td>\n",
+       "      <td>$194,236,985</td>\n",
+       "      <td>$1,578,320,890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>On Her Majesty's Secret Service</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>George Lazenby</td>\n",
+       "      <td>$22,774,493</td>\n",
+       "      <td>$79,898,612</td>\n",
+       "      <td>$102,673,105</td>\n",
+       "      <td>$759,277,403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Diamonds Are Forever</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>Sean Connery</td>\n",
+       "      <td>$43,819,547</td>\n",
+       "      <td>$153,729,919</td>\n",
+       "      <td>$197,549,466</td>\n",
+       "      <td>$1,323,825,310</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Live and Let Die</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>$35,377,836</td>\n",
+       "      <td>$124,114,288</td>\n",
+       "      <td>$159,492,124</td>\n",
+       "      <td>$974,913,569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>The Man with the Golden Gun</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>$20,972,000</td>\n",
+       "      <td>$73,575,016</td>\n",
+       "      <td>$94,547,016</td>\n",
+       "      <td>$520,488,035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>The Spy Who Loved Me</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>$46,838,673</td>\n",
+       "      <td>$164,321,768</td>\n",
+       "      <td>$211,160,441</td>\n",
+       "      <td>$945,692,140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Moonraker</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>$70,308,099</td>\n",
+       "      <td>$210,308,099</td>\n",
+       "      <td>$280,616,198</td>\n",
+       "      <td>$1,049,025,291</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>For Your Eyes Only</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>$54,812,802</td>\n",
+       "      <td>$192,297,005</td>\n",
+       "      <td>$247,109,807</td>\n",
+       "      <td>$737,795,397</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Octopussy</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>$67,893,619</td>\n",
+       "      <td>$238,187,779</td>\n",
+       "      <td>$306,081,398</td>\n",
+       "      <td>$834,041,078</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>A View to a Kill</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>Roger Moore</td>\n",
+       "      <td>$50,327,960</td>\n",
+       "      <td>$176,563,058</td>\n",
+       "      <td>$226,891,018</td>\n",
+       "      <td>$572,288,311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>The Living Daylights</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>Timothy Dalton</td>\n",
+       "      <td>$51,185,897</td>\n",
+       "      <td>$179,572,916</td>\n",
+       "      <td>$230,758,813</td>\n",
+       "      <td>$551,302,305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>License to Kill</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>Timothy Dalton</td>\n",
+       "      <td>$34,667,015</td>\n",
+       "      <td>$156,167,015</td>\n",
+       "      <td>$190,834,030</td>\n",
+       "      <td>$417,680,288</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>GoldenEye</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>Pierce Brosnan</td>\n",
+       "      <td>$106,429,941</td>\n",
+       "      <td>$352,194,034</td>\n",
+       "      <td>$458,623,975</td>\n",
+       "      <td>$816,735,871</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Tomorrow Never Dies</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>Pierce Brosnan</td>\n",
+       "      <td>$125,304,276</td>\n",
+       "      <td>$333,011,068</td>\n",
+       "      <td>$458,315,344</td>\n",
+       "      <td>$774,995,541</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>The World Is Not Enough</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>Pierce Brosnan</td>\n",
+       "      <td>$126,943,684</td>\n",
+       "      <td>$361,832,400</td>\n",
+       "      <td>$488,776,084</td>\n",
+       "      <td>$796,241,472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Die Another Day</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>Pierce Brosnan</td>\n",
+       "      <td>$160,942,139</td>\n",
+       "      <td>$431,971,116</td>\n",
+       "      <td>$592,913,255</td>\n",
+       "      <td>$894,478,362</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Casino Royale</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>Daniel Craig</td>\n",
+       "      <td>$167,445,960</td>\n",
+       "      <td>$616,502,912</td>\n",
+       "      <td>$783,948,872</td>\n",
+       "      <td>$1,055,375,614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Quantum of Solace</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>Daniel Craig</td>\n",
+       "      <td>$168,368,427</td>\n",
+       "      <td>$589,580,482</td>\n",
+       "      <td>$757,948,909</td>\n",
+       "      <td>$955,445,118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Skyfall</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>Daniel Craig</td>\n",
+       "      <td>$304,360,277</td>\n",
+       "      <td>$1,108,569,499</td>\n",
+       "      <td>$1,412,929,776</td>\n",
+       "      <td>$1,670,161,765</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Spectre</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>Daniel Craig</td>\n",
+       "      <td>$200,074,609</td>\n",
+       "      <td>$880,681,519</td>\n",
+       "      <td>$1,080,756,128</td>\n",
+       "      <td>$1,237,625,372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>No Time to Die</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>Daniel Craig</td>\n",
+       "      <td>$120,357,453</td>\n",
+       "      <td>$525,482,453</td>\n",
+       "      <td>$645,839,906</td>\n",
+       "      <td>$645,839,906</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              Title  Year           Actor US Box Office  \\\n",
+       "0                            Dr. No  1962    Sean Connery   $16,067,035   \n",
+       "1             From Russia with Love  1963    Sean Connery   $24,796,765   \n",
+       "2                        Goldfinger  1964    Sean Connery   $51,081,062   \n",
+       "3                       Thunderball  1965    Sean Connery   $63,595,658   \n",
+       "4               You Only Live Twice  1967    Sean Connery   $43,084,787   \n",
+       "5   On Her Majesty's Secret Service  1969  George Lazenby   $22,774,493   \n",
+       "6              Diamonds Are Forever  1971    Sean Connery   $43,819,547   \n",
+       "7                  Live and Let Die  1973     Roger Moore   $35,377,836   \n",
+       "8       The Man with the Golden Gun  1974     Roger Moore   $20,972,000   \n",
+       "9              The Spy Who Loved Me  1977     Roger Moore   $46,838,673   \n",
+       "10                        Moonraker  1979     Roger Moore   $70,308,099   \n",
+       "11               For Your Eyes Only  1981     Roger Moore   $54,812,802   \n",
+       "12                        Octopussy  1983     Roger Moore   $67,893,619   \n",
+       "13                 A View to a Kill  1985     Roger Moore   $50,327,960   \n",
+       "14             The Living Daylights  1987  Timothy Dalton   $51,185,897   \n",
+       "15                  License to Kill  1989  Timothy Dalton   $34,667,015   \n",
+       "16                        GoldenEye  1995  Pierce Brosnan  $106,429,941   \n",
+       "17              Tomorrow Never Dies  1997  Pierce Brosnan  $125,304,276   \n",
+       "18          The World Is Not Enough  1999  Pierce Brosnan  $126,943,684   \n",
+       "19                  Die Another Day  2002  Pierce Brosnan  $160,942,139   \n",
+       "20                    Casino Royale  2006    Daniel Craig  $167,445,960   \n",
+       "21                Quantum of Solace  2008    Daniel Craig  $168,368,427   \n",
+       "22                          Skyfall  2012    Daniel Craig  $304,360,277   \n",
+       "23                          Spectre  2015    Daniel Craig  $200,074,609   \n",
+       "24                   No Time to Die  2021    Daniel Craig  $120,357,453   \n",
+       "\n",
+       "   International B.O.   Total Revenue Adjusted Revenue  \n",
+       "0         $56,367,173     $72,434,208     $648,800,134  \n",
+       "1         $86,993,247    $111,790,012     $991,497,035  \n",
+       "2        $179,205,128    $230,286,190   $2,016,118,451  \n",
+       "3        $223,109,458    $286,705,116   $2,470,214,872  \n",
+       "4        $151,152,198    $194,236,985   $1,578,320,890  \n",
+       "5         $79,898,612    $102,673,105     $759,277,403  \n",
+       "6        $153,729,919    $197,549,466   $1,323,825,310  \n",
+       "7        $124,114,288    $159,492,124     $974,913,569  \n",
+       "8         $73,575,016     $94,547,016     $520,488,035  \n",
+       "9        $164,321,768    $211,160,441     $945,692,140  \n",
+       "10       $210,308,099    $280,616,198   $1,049,025,291  \n",
+       "11       $192,297,005    $247,109,807     $737,795,397  \n",
+       "12       $238,187,779    $306,081,398     $834,041,078  \n",
+       "13       $176,563,058    $226,891,018     $572,288,311  \n",
+       "14       $179,572,916    $230,758,813     $551,302,305  \n",
+       "15       $156,167,015    $190,834,030     $417,680,288  \n",
+       "16       $352,194,034    $458,623,975     $816,735,871  \n",
+       "17       $333,011,068    $458,315,344     $774,995,541  \n",
+       "18       $361,832,400    $488,776,084     $796,241,472  \n",
+       "19       $431,971,116    $592,913,255     $894,478,362  \n",
+       "20       $616,502,912    $783,948,872   $1,055,375,614  \n",
+       "21       $589,580,482    $757,948,909     $955,445,118  \n",
+       "22     $1,108,569,499  $1,412,929,776   $1,670,161,765  \n",
+       "23       $880,681,519  $1,080,756,128   $1,237,625,372  \n",
+       "24       $525,482,453    $645,839,906     $645,839,906  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculate inflation for each movie and place it into a new column 'Adjusted Revenue'\n",
+    "df['Adjusted Revenue'] = ''\n",
+    "curr_cpi = floater(inf_dict.get('2021'))\n",
+    "for index, row in df.iterrows():\n",
+    "    key = df['Year'].values[index]\n",
+    "    old_cpi = floater(inf_dict.get(key))\n",
+    "    base = floater(df['Total Revenue'].values[index])\n",
+    "    adjusted = base * (curr_cpi/old_cpi)\n",
+    "    adjusted = \"${:,.0f}\".format(adjusted)\n",
+    "    df['Adjusted Revenue'][index] = adjusted\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
