upadated csv writer

--- a/project007.ipynb
+++ b/project007.ipynb
@@ -787,13 +787,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write the data frame to a csv file\n",
     "f = open('project007.csv', 'w', newline='')\n",
     "writer = csv.writer(f)\n",
+    "writer.writerow(['Project 007 CSV', 'By: Andy Snitgen', 'For: Karen Jin', 'Class: comp574', 'Date: Oct. 31, 2021'])\n",
     "writer.writerow(['Title', 'Year', 'Actor', 'US Box Office', 'International Revenue', 'Adjusted Revenue', 'Average Rating', 'IMDb Rating', 'Metacritic']) \n",
     "for index, row in df.iterrows():\n",
     "    title = df.Title[index]\n",
