Work on .md write up and typos fixed

--- a/project007.ipynb
+++ b/project007.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Project 007 - Jupyter Notebook Code  \n",
     "Andy Snitgen  \n",
     "Professor Karen Jin  \n",
     "Comp 574 - Applied Computing II  \n",
@@ -213,7 +214,7 @@
     }
    ],
    "source": [
-    "# Run checker() to determine if No Time to Die is up to date in the API()\n",
+    "# Run checker() to determine if No Time to Die is up to date in the API\n",
     "print(\"No Time to Die has up to date Box Office API data: \")\n",
     "print(checker())\n",
     "if checker() == True:\n",
